--- a/nkata/style.css
+++ b/nkata/style.css
@@ -268,7 +268,7 @@ body footer {
   height: 30%;
   background-color: #16171D;
   padding: 40px;
-  text-align: left; }
+  text-align: center; }
   @media screen and (max-width: 480px) {
     body footer {
       display: block;
@@ -287,7 +287,8 @@ body footer {
     width: 21%;
     padding: 25px 25px;
     display: inline-block;
-    margin-right: 30px; }
+    margin-right: 30px; 
+    text-align: left; }
     @media screen and (max-width: 480px) {
       body footer div[class$="footer"] {
         width: 100%;
